[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://prefabs/PLayerBall.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=13]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=7]
radius = 18.1108

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 0.34902, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0.0133588, 0.131425 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
gravity = Vector3( -1000, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 15 )
color_ramp = SubResource( 14 )

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.15, 0.15 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "jump"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.1 ), Vector2( 0.1, 0.2 ), Vector2( 0.15, 0.15 ) ]
}

[node name="PLayerBall" type="RigidBody2D"]
physics_material_override = SubResource( 13 )
gravity_scale = 3.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
amount = 20
lifetime = 1.2
local_coords = false
draw_order = 1
process_material = SubResource( 10 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.992157, 1, 0.0392157, 1 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 11 )
anims/jump = SubResource( 12 )

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
cast_to = Vector2( -8, 22 )

[node name="RayCast2DRight" type="RayCast2D" parent="."]
cast_to = Vector2( 8, 22 )

[node name="RayCast2DFordward" type="RayCast2D" parent="."]
cast_to = Vector2( 22, 0 )
